--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
   },
   "homepage": "https://github.com/anurag-0071/covidTracker#readme",
   "dependencies": {
+    "ejs": "^3.1.3",
     "express": "^4.17.1",
     "http": "0.0.1-security",
     "mongoose": "^5.9.21",
-    "readline": "^1.3.0"
+    "node-cron": "^2.0.3",
+    "nodemailer": "^6.4.10",
+    "readline": "^1.3.0",
+    "request": "^2.88.2"
   }
 }
